# endian-conv

./: CMakeLists.txt  LICENSE  endian-conv.sln  endian-conv.vcxproj  endian-conv.vcxproj.filters
src/: endian_conv.cpp  endian_conv.h  main.cpp
